--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -26,7 +26,7 @@ jobs:
     - run: python -m pip install meson
     - run: python -m pip install -e .[tests]
     - run: sudo apt install -yq --no-install-recommends ninja-build gfortran liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
-    - run: meson setup build --buildtype debug -Dsystem_blas=true
+    - run: meson setup build --buildtype debug
       env:
         FC: gfortran
     - run: pytest
