--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         python-version: '3.x'
     - run: python -m pip install -e .[tests]
-    - run: sudo apt install -yq --no-install-recommends ninja-build gfortran liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin
+    - run: sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev
     - name: Setup CMake
       run: |
         pip install cmakeutils
@@ -53,7 +53,7 @@ jobs:
         python-version: '3.x'
     - run: pip install meson
     - run: pip install -e .[tests]
-    - run: sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin
+    - run: sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev
     - run: meson setup build
       env:
         FC: gfortran
