--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -25,7 +25,7 @@ jobs:
         python-version: '3.x'
     - run: pip install meson
     - run: pip install -e .[tests]
-    - run: brew install gcc ninja open-mpi
+    - run: brew install gcc ninja open-mpi lapack
     - run: meson setup build
       env:
         FC: gfortran-9
@@ -42,6 +42,8 @@ jobs:
         path: build/meson-logs/testlog.txt
 
   macosCmake:
+    # works but takes 3-4 times as long as Meson--conserving CI resources
+    if: false
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
@@ -51,7 +53,7 @@ jobs:
     - run: pip install -e .[tests]
     - name: Install dependencies
       run: |
-        brew install cmake gcc lapack open-mpi
+        brew install gcc lapack open-mpi
         brew tap dpo/openblas
         brew install mumps
     - run: cmake -B build
