meson: simplify/robustify library & matlab finding

--- a/cmake/meson.build
+++ b/cmake/meson.build
@@ -13,7 +13,7 @@ bounds = fc.first_supported_argument(['-Werror=array-bounds', '-check bounds', '
 if fc.get_id() == 'gcc'
   add_project_arguments('-Wno-unused-variable', '-Wno-maybe-uninitialized', '-Wno-unused-dummy-argument', '-Wno-unused-function',
     impnone, std18, language : 'fortran')
-  if buildtype.contains('debug')
+  if get_option('debug')
     add_project_arguments(bounds, '-fcheck=all', language: 'fortran')
   endif
 elif fc.get_id() == 'intel'
@@ -47,26 +47,28 @@ endif
 
 # --- Find Lapack
 # we don't use fallback because some systems have screwed-up libs factory installed
-lapack = disabler()
 blas = disabler()
-system_blas = get_option('system_blas')
 lapack_root = get_option('LAPACK_ROOT')
-if system_blas
+if lapack_root == ''
   blas = dependency('blas', required: false, disabler: true)
   if not blas.found()  # necessary for some systems incl. CentOS 7
-    blas = fc.find_library('blas', dirs: lapack_root, required: false, disabler: true)
+    blas = fc.find_library('blas', required: false, disabler: true)
   endif
+else
+  blas = fc.find_library('blas', dirs: lapack_root, required: false, disabler: true)
 endif
 if blas.found() and not fc.links('x=dnrm2(1, [2.], 1); end', dependencies: blas, name: 'BLAS')
   blas = disabler()
 endif
 
 lapack = disabler()
-if system_blas and blas.found()
+if lapack_root == ''
   lapack = dependency('lapack', cmake_module_path: 'cmake/Modules', required: false, disabler: true)
   if not lapack.found()
-    lapack = fc.find_library('lapack', dirs: lapack_root, required: false, disabler: true)
+    lapack = fc.find_library('lapack', required: false, disabler: true)
   endif
+else
+  lapack = fc.find_library('lapack', dirs: lapack_root, required: false, disabler: true)
 endif
 if lapack.found() and not fc.links('print *,disnan(0.); end', dependencies: lapack, name: 'LAPACK')
   lapack = disabler()
@@ -86,20 +88,21 @@ endif
 
 # --- Find Scalapack
 scalapack = disabler()
-
-if system_blas
+scalapack_root = get_option('SCALAPACK_ROOT')
+if scalapack_root == ''
   # dependency('scalapack') not yet working in Meson--cmake->meson bug within Meson, yielding long meson-log.txt
   # scalapack = dependency('scalapack', cmake_module_path : 'cmake/Modules')
-  scalapack_root = get_option('SCALAPACK_ROOT')
-  if scalapack_root == ''  # system
+  if os == 'linux'
     scalapack = fc.find_library('scalapack-openmpi', required: false, disabler: true)
     if not scalapack.found()
       scalapack = fc.find_library('scalapack', required: false, disabler: true)
     endif
-  else
-    message('searching for SCALAPACK in ' + scalapack_root)
-    scalapack = fc.find_library('scalapack', dirs : scalapack_root / 'lib', required: false, disabler: true)
+  elif os == 'darwin'
+    scalapack_root = '/usr/local/opt/scalapack'
+    scalapack = fc.find_library('scalapack', dirs: scalapack_root / 'lib', required: false, disabler: true)
   endif
+else
+  scalapack = fc.find_library('scalapack', dirs : scalapack_root / 'lib', required: false, disabler: true)
 endif
 if scalapack.found() and not fc.links('L = numroc(1,1,1,1,1); end', dependencies: scalapack, name: 'SCALAPACK')
   scalapack = disabler()
@@ -119,32 +122,36 @@ elif bits == '32'
 else
   error('unknown precision ' + bits)
 endif
-if system_blas
+
+mumps_root = get_option('MUMPS_ROOT')
+
+if mumps_root == ''
   # mumps = dependency('MUMPS', cmake_module_path : 'cmake/Modules')
-  mumps_root = get_option('MUMPS_ROOT')
-  if mumps_root == ''
-    mumpsinc = []
+  if os == 'linux'
+    mumps_root = '/usr'
     mumpslib = [fc.find_library(mumps_name, required : false, disabler: true),
                 fc.find_library('mumps_common', required: false, disabler: true)]
-    if os == 'linux'
-      mumpsinc = '/usr/include'
-    elif os == 'darwin'  # assuming homebrew
-      mumpinc = '/usr/local/opt/mumps'
-    endif
-  else
-    message('searching for MUMPS in ' + mumps_root)
-    mumpsinc = mumps_root / 'include'
-    mumpslib = [fc.find_library(mumps_name, dirs : mumps_root, required : false, disabler: true),
-                fc.find_library('mumps_common', dirs : mumps_root, required : false, disabler: true)]
+  elif os == 'darwin'
+    # assuming homebrew
+    mumps_root = '/usr/local/opt/mumps'
+    mumpslib = [fc.find_library(mumps_name, dirs: mumps_root / 'lib', required : false, disabler: true),
+                  fc.find_library('mumps_common', dirs: mumps_root / 'lib', required: false, disabler: true)]
+
   endif
-  if mumpslib[0].found() and mumpslib[1].found()  # has to be in if statement in case mumpsinc does not exist
-    mumps = declare_dependency(include_directories: include_directories(mumpsinc), dependencies: mumpslib)
-  endif
+else
+  mumpslib = [fc.find_library(mumps_name, dirs : mumps_root, required : false, disabler: true),
+              fc.find_library('mumps_common', dirs : mumps_root, required : false, disabler: true)]
 endif
+mumpsinc = mumps_root / 'include'
+if mumpslib[0].found() and mumpslib[1].found()
+  mumps = declare_dependency(include_directories: include_directories(mumpsinc), dependencies: mumpslib)
+endif
+
 code='''
 include 'dmumps_struc.h'
 type(DMUMPS_STRUC) :: mumps_par
 end'''
+
 if mumps.found() and not fc.links(code, include_directories: include_directories(mumpsinc), dependencies: mumpslib, name: 'MUMPS')
   mumps = disabler()
 endif
@@ -182,12 +189,5 @@ if octave.found() and run_command(octave, '--eval', 'assert(exist("validateattri
 endif
 
 #--- Matlab
-
-matlab = disabler()
-if get_option('usematlab')  # buggy for Matlab < R2019a, may hang "meson setup" silently for two minutes
-  matlab = find_program('matlab', required: false, disabler: true)
-  # must do .found check since run_command(disabler()) has undefined returncode.
-  if matlab.found() and run_command(python, meson.source_root() / 'script_utils/meson_matlab_has_batch.py').returncode() != 0
-    matlab = disabler()
-  endif
-endif
+# buggy for Matlab < R2019a, may hang "meson setup" silently for two minutes
+matlab = find_program('matlab', required: get_option('matlab'), disabler: true)
