--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,6 +1,6 @@
 option('realbits', type : 'string', value : '64', description : 'real bits')
 option('arith', type: 'string', value: 'sd', description: 'precision (s,d,c,z)')
-option('usematlab', type : 'boolean', value: false, description : 'Matlab >= R2019a required')
+option('matlab', type : 'feature', value: 'disabled', description : 'Matlab >= R2019a required')
 option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
