--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,4 @@
-option('realbits', type : 'combo', choices : ['64', '32'] description : 'real bits')
+option('realbits', type : 'combo', choices : ['64', '32'], description : 'real bits')
 option('arith', type: 'string', value: 'sd', description: 'precision (s,d,c,z)')
 option('matlab', type : 'feature', value: 'disabled', description : 'Matlab >= R2019a required')
 option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
