--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,6 +1,7 @@
 option('realbits', type : 'combo', choices : ['64', '32'], description : 'real bits')
 option('arith', type: 'string', value: 'sd', description: 'precision (s,d,c,z)')
 option('matlab', type : 'feature', value: 'disabled', description : 'Matlab >= R2019a required')
+option('hdf5', type: 'feature', value: 'disabled', description: 'HDF5 I/O instead of raw binary files')
 option('LAPACK_ROOT', type : 'string', description : 'root directory of LAPACK')
 option('SCALAPACK_ROOT', type : 'string', description : 'root directory of SCALAPACK')
 option('MUMPS_ROOT', type : 'string', description : 'root directory of MUMPS')
