Squashed commit of the following:
commit 2d749c5ccbce0e0e0533e1163051a6131e6f8e2c
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Oct 28 01:12:15 2019 -0400

    hdf5 prereqs

commit 594013a42c4f63b47239408bb8494a5107614523
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Oct 28 00:43:18 2019 -0400

    cmake: accomodate new filenames for io

commit 2f3ca3b3dbb0ac48f71c2e1238dbfd2e0d2c972a
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Mon Oct 28 00:27:06 2019 -0400

    ci: enabled HDF5

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -51,10 +51,32 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - run: pip install meson
     - run: pip install -e .[tests]
     - run: sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev
     - run: meson setup build
+      env:
+        FC: gfortran
+    - run: ninja -C build
+    - run: meson test -C build --suite unit -v
+    - run: meson test -C build --suite 2d_fang -v
+    - run: meson test -C build --suite 2d_glow -v
+# CI is too slow for 3d_glow
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: Linux_Meson_Testlog
+        path: build/meson-logs/testlog.txt
+
+  mesonHDF5:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - run: pip install -e .[tests]
+    - run: sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev libhdf5-dev
+    - run: meson setup build -Dhdf5=enabled
       env:
         FC: gfortran
     - run: ninja -C build
