--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ endif()
 option(TRACE "dump variables to disk at certain locations in program" OFF)
 option(useglow "use NCAR GLOW instead of Fang" ON)
 option(usematab "enable Matlab tests, which are slow and duplicate fast Octave tests" OFF)
+option(usehdf5 "use HDF5 instead of raw uncompressed output" OFF)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules/)
 
@@ -41,7 +42,13 @@ add_subdirectory(ionization)
 add_subdirectory(numerical)
 
 add_subdirectory(io)
-add_library(io io/io.f90 io/aurora.f90 io/mag.f90 io/plasma.f90 io/output.f90 io/input.f90)
+if(usehdf5)
+  set(io_src io/plasma_output_hdf5.f90)
+else()
+  set(io_src io/plasma_output_raw.f90)
+endif()
+add_library(io io/io.f90 io/aurora.f90 io/mag.f90 io/plasma.f90 io/output.f90 io/input.f90
+  io/plasma_input_raw.f90 ${io_src})
 target_link_libraries(io PRIVATE calculus const fsutils grid mpimod timeutils)
 target_compile_definitions(io PRIVATE TRACE=${TRACE})
 target_compile_options(io PRIVATE ${FFLAGS})
