--- a/io/meson.build
+++ b/io/meson.build
@@ -1,4 +1,15 @@
-io_src = files('io.f90', 'aurora.f90', 'mag.f90', 'plasma.f90', 'output.f90', 'input.f90')
+io_src = files('io.f90', 'aurora.f90', 'mag.f90',
+'plasma.f90',
+'output.f90', 'input.f90')
+
+# FIXME: when validated, use if hdf5_interface.found() as for output.
+io_src += files('plasma_input_raw.f90')
+
+if hdf5_interface.found()
+  io_src += files('plasma_output_hdf5.f90')
+else
+  io_src += files('plasma_output_raw.f90')
+endif
 
 fsutils = library('fsutils', 'mkdir.F90', 'expanduser.f90')
 
