--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -23,8 +23,8 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - run: python -m pip install meson
-    - run: python -m pip install -e .[tests]
+    - run: pip install -e .[tests]
+    - run: sudo apt update -y
     - run: sudo apt install -yq --no-install-recommends ninja-build gfortran liblapack-dev libscalapack-mpi-dev libmumps-dev libopenmpi-dev openmpi-bin octave
     - run: meson setup build --buildtype debug
       env:
