--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,8 @@ scripts =
   tests/compare_all.py
 install_requires =
   numpy >= 1.16.0
+  h5py
+  meson >= 0.52.0
 
 
 [options.extras_require]
@@ -47,7 +49,3 @@ all =
   xarray
   scipy
   matplotlib >= 3.1
-
-
-[options.entry_points]
-console_scripts =
