--- a/cmake/meson.build
+++ b/cmake/meson.build
@@ -162,7 +162,7 @@ endif
 # --- HDF5
 # NOTE: Gemini HDF5 I/O is just a stub at the moment, undergoing development.
 if get_option('hdf5').enabled()
-  hdf5_proj = subproject('oo_hdf5_fortran')
+  hdf5_proj = subproject('h5fortran')
   hdf5_interface = hdf5_proj.get_variable('hdf5_interface')
 else
   hdf5_interface = disabler()
