--- a/io/meson.build
+++ b/io/meson.build
@@ -1,4 +1,5 @@
-io_src = files('io.f90', 'aurora.f90', 'mag.f90',
+io_src = files('io.f90', 'aurora.f90',
+'mag.f90',
 'plasma.f90',
 'output.f90', 'input.f90')
 
@@ -6,9 +7,9 @@ io_src = files('io.f90', 'aurora.f90', 'mag.f90',
 io_src += files('plasma_input_raw.f90')
 
 if hdf5_interface.found()
-  io_src += files('plasma_output_hdf5.f90')
+  io_src += files('plasma_output_hdf5.f90', 'mag_hdf5.f90')
 else
-  io_src += files('plasma_output_raw.f90')
+  io_src += files('plasma_output_raw.f90', 'mag_raw.f90')
 endif
 
 fsutils = library('fsutils', 'mkdir.F90', 'expanduser.f90')
