--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -33,7 +33,36 @@ jobs:
       run: |
         pip install cmakeutils
         cmake_setup ${cmake_version} --prefix ${HOME}/.local
-        ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/cmake -B build
+    - name: CMake configure
+      run: ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/cmake -B build
+      env:
+        FC: gfortran
+    - run: ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/cmake --build build --parallel
+# CI is too slow for 3d_glow
+# -V output truncated on CI?
+    - run: ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/ctest --parallel --output-on-failure -E 3d_glow
+      working-directory: build
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: Linux_Cmake_log
+        path: build/CMakeFiles/CMakeError.log
+
+  cmakeHDF5:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.x'
+    - run: python -m pip install -e .[tests]
+    - run: sudo apt install -yq --no-install-recommends ninja-build gfortran libopenmpi-dev openmpi-bin liblapack-dev libscalapack-mpi-dev libmumps-dev libhdf5-dev libpthread-stubs0-dev
+    - name: Setup CMake
+      run: |
+        pip install cmakeutils
+        cmake_setup ${cmake_version} --prefix ${HOME}/.local
+    - name: CMake configure
+      run: ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/cmake -B build -Dusehdf5=true
       env:
         FC: gfortran
     - run: ${HOME}/.local/cmake-${cmake_version}-Linux-x86_64/bin/cmake --build build --parallel
