--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -8,9 +8,6 @@ set_target_properties(logging PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY
 
 if(usehdf5)
   set(io_src plasma_output_hdf5.f90 mag_hdf5.f90)
-  add_dependencies(io h5fortran)
-  target_link_directories(io PRIVATE ${h5fortran_BINARY_DIR})
-  target_include_directories(io PRIVATE ${h5fortran_BINARY_DIR})
 else()
   set(io_src plasma_output_raw.f90 mag_raw.f90)
 endif()
@@ -18,6 +15,13 @@ add_library(io io.f90 aurora.f90 output.f90 input.f90
   mag.f90
   plasma.f90 plasma_input_raw.f90
   ${io_src})
+if(usehdf5)
+  target_link_directories(io PUBLIC ${h5fortran_BINARY_DIR})
+  target_include_directories(io PRIVATE ${h5fortran_BINARY_DIR} ${HDF5_INCLUDE_DIRS} ${HDF5_Fortran_INCLUDE_DIRS})
+  target_compile_options(io PRIVATE ${HDF5_Fortran_DEFINITIONS})
+  add_dependencies(io h5fortran_proj)
+  target_link_libraries(io PRIVATE h5fortran ${HDF5_Fortran_HL_LIBRARIES} ${HDF5_Fortran_LIBRARIES})
+endif()
 set_target_properties(io PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 target_link_libraries(io PRIVATE calculus const fsutils grid mpimod timeutils)
 target_compile_definitions(io PRIVATE TRACE=${TRACE})
