--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         python-version: '3.7'
     - run: pip install -e .[tests]
-    - run: brew install gcc ninja open-mpi lapack
-    - run: meson setup build
+    - run: brew install gcc ninja open-mpi lapack hdf5
+    - run: meson setup build -Dhdf5=enabled
       env:
         FC: gfortran-9
         CC: gcc-9
@@ -52,10 +52,10 @@ jobs:
     - run: pip install -e .[tests]
     - name: Install dependencies
       run: |
-        brew install gcc lapack open-mpi
+        brew install gcc lapack open-mpi hdf5
         brew tap dpo/openblas
         brew install mumps
-    - run: cmake -B build
+    - run: cmake -B build -Dusehdf5=enabled
       env:
         FC: gfortran-9
         CC: gcc-9
