--- a/ionization/CMakeLists.txt
+++ b/ionization/CMakeLists.txt
@@ -22,18 +22,18 @@ add_library(ionization ionization.f90 glow_dummy.f90)
 target_link_libraries(ionization PRIVATE const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
 set_target_properties(ionization PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
 
-if(useglow)
-  include(${PROJECT_SOURCE_DIR}/cmake/glow.cmake)
+if(glow)
+  include(${CMAKE_SOURCE_DIR}/cmake/glow.cmake)
 
   add_library(ionization_glow ionization.f90 glow_run.F90)
-  target_link_libraries(ionization_glow PRIVATE cglow const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
+  target_link_libraries(ionization_glow PUBLIC cglow const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
   set_target_properties(ionization_glow PROPERTIES Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR})
-  target_include_directories(ionization_glow PRIVATE ${ncarglow_BINARY_DIR})
+  target_include_directories(ionization_glow PUBLIC ${GLOW_BINARY_DIR})
+  target_link_directories(ionization_glow PUBLIC ${GLOW_BINARY_DIR})
   # double quotes needed in next line since it injects directly into Fortran code
-  target_compile_definitions(ionization_glow PRIVATE DATADIR="${CMAKE_BINARY_DIR}/_deps/ncarglow-src/data/")
-  # this is a workaround for GCC 8.3 needing to NOT build these targets in parallel
-  add_dependencies(ionization_glow ionization)
-endif(useglow)
+  target_compile_definitions(ionization_glow PRIVATE DATADIR="${CMAKE_BINARY_DIR}/GLOW_proj-prefix/data/")
+  add_dependencies(ionization_glow GLOW_proj)
+endif(glow)
 
 add_library(precipBCs boundary_conditions/precipBCs_mod.f90)
 target_link_libraries(precipBCs PRIVATE mpimod const grid interp timeutils MPI::MPI_Fortran)
