--- a/.github/workflows/ci_python.yml
+++ b/.github/workflows/ci_python.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
     - "**/*.py"
+    - "**/*.yml"
   pull_request:
     paths:
     - "**/*.py"
+    - "**/*.yml"
 
 jobs:
 
@@ -16,7 +18,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.x'
+        python-version: '3.7'
     - run: python -m pip install -e .[lint]
     - run: flake8
     - run: mypy .
