python: add Glow aurora plots
ci: fix yml paths ignore

doc cleanup, auto-install ninja

python: correct glow raw reading

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -5,15 +5,13 @@ env:
 
 on:
   push:
-    paths-ignore:
-      - "**/*.py"
-      - "**/*.md"
-      - "**/*.m"
+    paths:
+      - "**.f90"
+      - "**.F90"
   pull_request:
-    paths-ignore:
-      - "**/*.py"
-      - "**/*.md"
-      - "**/*.m"
+    paths:
+      - "**.f90"
+      - "**.F90"
 
 jobs:
 
